--- a/example/components/SiteContainer.module.scss
+++ b/example/components/SiteContainer.module.scss
@@ -3,6 +3,7 @@
 
 .root {
   background-color: colors.$lemon;
+  color: colors.$black;
   font-family: fonts.$body;
   padding: 1em;
 }
